# autoria-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
examples/: README.md  claude_desktop_config.json  claude_desktop_config_windows.json  inproc_session.py  mcp_http_config.json
openapi/: OPEN-QUESTIONS.md  autoria-used-cars.yaml
scripts/: phase1_probes.ps1  phase1_probes.sh
src/autoria_mcp/: __init__.py  cache.py  client.py  config.py  dictionaries.py  logging_config.py  models.py  quota.py  runtime.py  server.py  shaping.py
src/autoria_mcp/tools/: __init__.py  _common.py  _errors.py  details.py  health.py  lookups.py  mirrors.py  paid.py  resources.py  search.py
tests/: __init__.py  conftest.py  test_cache.py  test_cache_lru.py  test_client.py  test_details_tool.py  test_dictionaries.py  test_logging.py  test_lookup_tools.py  test_mirrors.py  test_models.py  test_paid_tools.py  test_quota.py  test_resources.py  test_runtime.py  test_search_tool.py  test_server_roundtrip.py  test_shaping.py  test_smoke.py
tests/fixtures/: ai_average_price_omni.json  ai_average_price_params.json  bodystyles.json  categories.json  cities.json  colors.json  countries.json  driver_types.json  equips.json  error_api_key_missing.json  error_over_rate_limit.json  fuel_types.json  gearboxes.json  generations.json  info.json  info_damaged.json  marks.json  models.json  models_all.json  models_group.json  modifications.json  notice_error.json  options.json  options_v2.json  search.json  search_ignored.json  states.json  statistic.json  vin_params.json
